kafka-secondary/kafka-secondary-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: kafka-secondary
  name: kafka-secondary
spec:
  serviceName: kafka-secondary
  replicas: 3
  selector:
    matchLabels:
      service: kafka-secondary
  template:
    metadata:
      labels:
        network/kafka-secondary-network: "true"
        service: kafka-secondary
    spec:
      securityContext:
        fsGroup: 1000
      enableServiceLinks: false
      containers:
      - name: kafka-secondary
        imagePullPolicy: IfNotPresent
        image: bitnami/kafka:latest
        ports:
          - containerPort: 29092
          - containerPort: 9092
        resources: {}
        volumeMounts:
          - mountPath: /var/lib/kafka/
            name: kafka-secondary-data
      hostname: kafka-secondary
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: kafka-secondary-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
