kafka-secondary/kafka-secondary-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: kafka-secondary
  name: kafka-secondary
spec:
  clusterIP: None
  selector:
    service: kafka-secondary
  ports:
    - name: internal
      port: 29092
      targetPort: 29092
    - name: external
      port: 30092
      targetPort: 9092
