kafka-secondary/zookeeper-secondary-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: zookeeper-secondary
  name: zookeeper-secondary
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    service: zookeeper-secondary
