kafka-secondary/kafka-secondary-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-secondary-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/kafka-secondary-network: "true"
  podSelector:
    matchLabels:
      network/kafka-secondary-network: "true"
